objects/Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Action Owner</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PAC_Requestor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BEP Requestor</label>
        <referenceTo>ODP_PAC_Member__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <label>Stage ID</label>
        <referenceTo>Release_Stage__c</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Owner__c</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>PAC_Requestor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AI-{0000000000}</displayFormat>
        <label>Action Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>